Fix refund amount field validation message appears misaligned on Edit order screen #30527

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -1709,6 +1709,7 @@ ul.wc_coupon_list_block {
 			width: 10em;
 			margin: 0 0 0 0.5em;
 			box-sizing: border-box;
+			position: relative;
 
 			input[type="text"] {
 				width: 96%;
